makes the armor variants always register, hides in jei if disabled, few minor tweaks to release as non-beta